welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:4: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (b <= 19 && b >= 13 && (a < 13 || a > 19)) {
         ^